tests/snapshots/examples_fixtures/type_classes__interface_roundtrip.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/interface_roundtrip.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
