tests/snapshots/examples_fixtures/type_classes__invalid_higher_kind.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/invalid_higher_kind.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
