tests/snapshots/examples_fixtures/type_classes__kind_valid.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/kind_valid.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
