tests/snapshots/examples_fixtures/type_classes__let_annotation_rigid_param.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/let_annotation_rigid_param.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
