tests/snapshots/examples_fixtures/type_classes__mempty_result_dispatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/mempty_result_dispatch.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
