tests/snapshots/examples_fixtures/type_classes__module_member_shadows_stub.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/module_member_shadows_stub.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
