tests/snapshots/examples_fixtures/type_classes__multi_parameter_resolution.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/multi_parameter_resolution.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
