tests/snapshots/examples_fixtures/type_classes__multiple_class_obligations.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/multiple_class_obligations.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
