tests/snapshots/examples_fixtures/type_classes__no_partial_resolution.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/no_partial_resolution.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
