tests/snapshots/examples_fixtures/type_classes__option_instances.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/option_instances.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
