tests/snapshots/examples_fixtures/type_classes__qualified_class_id.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/qualified_class_id.flx
== compile ==
failed (compile)
== diagnostics ==
error[E012]: Unknown Module Member

Module `QualifiedClassId.BetaRender` has no member named `render`.

  examples/type_classes/qualified_class_id.flx:32:11
   |
32 |     print(Beta.render(1))
   |           ^^^^^^^^^^^

Hint:
  Check the module's public members or import the correct module.
== stdout ==
<not executed>
